<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".ResultActivity">



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/seuimc"
        android:textSize="20sp"
        android:padding="10dp"
        android:textStyle="bold"
        android:textColor="#FF018786" />
    <TextView
        android:id="@+id/textView_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        tools:text="RESULTADO"
        android:textSize="38sp"
        />

    <TextView
        android:id="@+id/textView_classificacao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        tools:text="Classificação: xxx"
        android:textSize="25sp"
        />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tabela"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:layout_marginStart="20dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/abaixopeso"
        android:textSize="18sp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pesonormal"
        android:textSize="18sp"
        android:layout_marginStart="20dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/acimapeso"
        android:textSize="18sp"
        android:layout_marginStart="20dp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/obesidade"
        android:textSize="18sp"
        android:layout_marginStart="20dp" />



    </LinearLayout>


