<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/editAltura"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/altura"
        android:inputType="numberDecimal"
        android:maxLength="6" />

    <EditText
        android:id="@+id/editPeso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editAltura"
        android:layout_marginTop="16dp"
        android:hint="@string/peso"
        android:inputType="numberDecimal"
        android:maxLength="6" />

    <Button
        android:id="@+id/btncalcular"
        android:text="@string/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true" />


</RelativeLayout>